change icons, update package.json,make bundle

--- a/src/styles/border-toolbar.pcss
+++ b/src/styles/border-toolbar.pcss
@@ -1,7 +1,7 @@
 /* tc - project's prefix*/
 
 .tc-toolbar {
-  background: #368be6;
+  background: #9b7b81;
 
   &--hidden {
     visibility: hidden;
@@ -35,6 +35,7 @@
     height: 21px;
     width: 21px;
     margin-top: 0;
+    color: #9b7b81;
 
     &--hor {
       margin-left: -10px;
@@ -42,6 +43,10 @@
 
     &--ver {
       margin-top: -10px;
+    }
+
+    svg {
+      vertical-align: top;
     }
   }
 
